# smdsp-insights-and-visualization-dashboard

./: .gitignore  CREDITS.md  HONESTY.md  README.md
Backend/: .env  Dockerfile  pyproject.toml
Backend/app/: main.py
Backend/app/agent/: DBScheme.py  model.py  sql_agent.py
Backend/app/constants/: queries.py  reddit_queries.py
Backend/app/models/: chan.py  comparison_response.py  reddit.py
Backend/app/routes/: chan.py  comparison.py  reddit.py
Backend/app/utils/: faktory.py  logger.py  plsql.py
frontend/: .dockerignore  .env  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/: store.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/Chan/: page.jsx
frontend/src/app/Reddit/: page.jsx
frontend/src/app/api/: chanApi.js  comparisonApi.js  redditApi.js
frontend/src/app/api/copilotkit/: route.ts
frontend/src/app/comparison/: page.jsx
frontend/src/app/components/: AnimatedNumber.jsx  Header.jsx  QueryProvider.tsx  StatsCards.jsx
frontend/src/app/components/Chart/: BarChart.jsx  GroupedBarChart.jsx  HorizontalBarChart.jsx  LineChart.jsx
frontend/src/app/components/Copilot/: CopilotWrapper.jsx
frontend/src/app/components/CountriesCard/: CountriesCard.jsx  CountryList.jsx  WorldMap.jsx
frontend/src/app/components/Filter/: Filter.jsx
frontend/src/app/hooks/: useChanDashboard.js  useComparisonDashboard.js  useRedditDashboard.js
frontend/src/slices/: chanSlice.js  redditSlice.js
