[project]
name = "project-3-implementation-socialmediaavengers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.123.8",
    "psycopg2>=2.9.11",
    "pydantic[dotenv]>=2.12.5",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]
